grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: tempo
                port:
                  number: 4318
            path: /v1/traces
